--- a/portfolio/banking/index.jade
+++ b/portfolio/banking/index.jade
@@ -33,7 +33,7 @@ html(lang="en")
 						h2.section__title Challenge accepted
 						p.section__text Based on set requirements, our developers team created a single fee management system that gradually reduced costs of the billing process for the bank. The software could optimize fee schedules, had an automated fee discount policy, included automated fee calculation, manual and automated billing workflows and reports, featured customized standard instructions workflow.
 
-				section.section(data-animation="fadeInUp")
+				section.section.section--without-padding-bottom(data-animation="fadeInUp")
 					.section__wrapper.section__wrapper--tight
 						h2.section__title What technologies did we use?
 						ul.section__tags.tags
@@ -48,22 +48,25 @@ html(lang="en")
 							li.tags__item HTML
 							li.tags__item Watin
 							li.tags__item SpecFlow
-					.slider.slider--project
-						ul.slider__slides-wrapper
-							li.slider__slide
-								.slider__slide-inner
-									.slider__img-wrapper
-										img(src="../../photos/banking/banking-gallery-1.png")
-							li.slider__slide
-								.slider__slide-inner
-									.slider__img-wrapper
-										img(src="../../photos/banking/banking-gallery-2.png")
-						.slider__dots
-							button.slider__dot.slider__dot--active(type="button")
-							button.slider__dot(type="button")
-					.section__wrapper.section__wrapper--tight
-						a.section__btn.btn(href="/portfolio/") Back to all projects
-							include ../../icons/arrow-go
+
+				section.section.section--without-padding-top(data-animation="fadeIn")
+					.section__wrapper.section__wrapper--slider
+						.slider.slider--project
+							ul.slider__slides-wrapper
+								li.slider__slide
+									.slider__slide-inner
+										.slider__img-wrapper
+											img(src="../../photos/banking/banking-gallery-1.png")
+								li.slider__slide
+									.slider__slide-inner
+										.slider__img-wrapper
+											img(src="../../photos/banking/banking-gallery-2.png")
+							.slider__dots
+								button.slider__dot.slider__dot--active(type="button")
+								button.slider__dot(type="button")
+						.section__wrapper.section__wrapper--tight
+							a.section__btn.btn(href="/portfolio/") Back to all projects
+								include ../../icons/arrow-go
 
 			include ../../parts/footer
 			+footer("project")
