project btns text fix, on-game type => mobile

--- a/portfolio/gambling/index.jade
+++ b/portfolio/gambling/index.jade
@@ -62,7 +62,7 @@ html(lang="en")
 								button.slider__dot.slider__dot--active(type="button")
 								button.slider__dot(type="button")
 						.section__wrapper.section__wrapper--tight
-							a.section__btn.btn(href="/portfolio/") Back to all projects
+							a.section__btn.btn(href="/portfolio/") Next projects
 								include ../../icons/arrow-go
 
 			include ../../parts/footer
