--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -37,7 +37,7 @@ html(lang="en")
 											include ../icons/arrow-go
 								li.project-item.project-item--entertaiment(data-animation="zoomIn" data-type="mobile")
 									.project-item__wrapper
-										span.project-item__type Web Development
+										span.project-item__type Mobile Development
 										h4.project-item__title Entertainment
 										p.project-item__descr Development a web application for a sports betting company for the audience of 5 million users.
 										a.project-item__link-btn.btn(href="/portfolio/on-game/") Details
