--- a/portfolio/yow/index.jade
+++ b/portfolio/yow/index.jade
@@ -108,6 +108,9 @@ html(lang="en")
 							.slider__dots
 								button.slider__dot.slider__dot--active(type="button")
 								button.slider__dot(type="button")
+					.section__wrapper
+						a.section__btn.btn(href="/portfolio") Next projects
+							include ../../icons/arrow-go
 
 			include ../../parts/footer
 			+footer("project-yow")
