--- a/portfolio/banking/index.jade
+++ b/portfolio/banking/index.jade
@@ -65,7 +65,7 @@ html(lang="en")
 								button.slider__dot.slider__dot--active(type="button")
 								button.slider__dot(type="button")
 						.section__wrapper.section__wrapper--tight
-							a.section__btn.btn(href="/portfolio/") Back to all projects
+							a.section__btn.btn(href="/portfolio/") Next projects
 								include ../../icons/arrow-go
 
 			include ../../parts/footer
