--- a/styl/blocks/project-page-reverse-block.styl
+++ b/styl/blocks/project-page-reverse-block.styl
@@ -134,6 +134,18 @@
 		
 @media $desktop-widths
 
+	.project-page-reverse-block
+		&--trawell
+			.project-page-reverse-block__section
+				position relative
+				&:first-child
+					top 5rem
+					padding-top 0
+				
+				&:last-child
+					bottom 5rem
+					padding-bottom 0
+
 	.project-page-reverse-block__section
 		display flex
 		&:nth-child(odd)
