add data-animations-group attribute to project-features__lists

--- a/portfolio/booking/index.jade
+++ b/portfolio/booking/index.jade
@@ -30,8 +30,8 @@ html(lang="en")
 							h1.section__title TraWell
 							p.section__text TraWell is an online web service created for a travel company that enables customers to plan their journey in advance. The service allows to book tickets for flights, cruises, rent cars, buy vacation packages and various attractions via the internet. Through TraWell you can pay online for the services and post reviews. The site uses multiple global distribution systems like Amadeus or the Sabre reservation systems for flights and for hotels, Worldspan and Pegasus, along with its own hotel reservation system for contracted, bulk-rate reservations.
 
-					section.section.project-features.project-features--trawell
-						ul.project-features__list
+					section.section.project-features.project-features--trawell(data-animation="fadeInUp")
+						ul.project-features__list(data-animations-group)
 							li.project-features__item
 								.project-features__icon-wrapper(data-animation="zoomIn")
 									include ../../icons/trawell-features-ic1
