--- a/portfolio/on-game/index.jade
+++ b/portfolio/on-game/index.jade
@@ -74,7 +74,7 @@ html(lang="en")
 								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united(data-animation="zoomIn")
 
 				section.section.project-features.project-features--on-game(data-animation="fadeInUp")
-					ul.project-features__list
+					ul.project-features__list(data-animations-group)
 						li.project-features__item
 							.project-features__icon-wrapper(data-animation="zoomIn")
 								include ../../icons/on-game-features-ic1
