--- a/portfolio/yow/index.jade
+++ b/portfolio/yow/index.jade
@@ -72,7 +72,7 @@ html(lang="en")
 				section.section.project-features.project-features--yow(data-animation="fadeInUp")
 					h2.section__title.project-features__title Our Features
 					p.section__text.project-features__text Our technical team used a comprehensive set of tools and technologies during yow development.
-					ul.project-features__list
+					ul.project-features__list(data-animations-group)
 						li.project-features__item
 							.project-features__icon-wrapper(data-animation="zoomIn")
 								include ../../icons/yow-features-ic1
