relocation page last text changed

--- a/services/relocation/index.jade
+++ b/services/relocation/index.jade
@@ -58,7 +58,7 @@ html(lang="en")
 				section.section
 					.section__wrapper
 						h2.section__title Result
-						p.section__text You get well-qualified team member, clean and robust code and successfully implemented product
+						p.section__text You get a new, high-skilled team member that completes your business team
 
 			include ../../parts/footer
 			+footer("services-slide")
