--- a/portfolio/on-game/index.jade
+++ b/portfolio/on-game/index.jade
@@ -105,8 +105,8 @@ html(lang="en")
 							.project-page-reverse-block__decorative-img.project-page-reverse-block__decorative-img--on-game-2(data-animation="fadeInLeft")
 						section.project-page-reverse-block__section.project-page-reverse-block__section--without-padding-bottom
 							.project-page-reverse-block__inner(data-animation="fadeInLeft")
-								h2.project-page-reverse-block__title Real-time updates
-								p.project-page-reverse-block__text ON-GAME enables users to build a personalized feed and get the latest updates on the game. The users can customize ON-GAME in order to get instant alerts for upcoming games. The live commentary shows minute-by-minute match/game highlights.
+								h2.project-page-reverse-block__title Statistics
+								p.project-page-reverse-block__text The application includes detailed statistics, schedules, makes possible to display team standings, fixtures, pre-match lineups, close game situations.
 							.project-page-reverse-block__decorative-img.project-page-reverse-block__decorative-img--on-game-3(data-animation="fadeInRight")
 
 				section.section.section--on-game-technologies(data-animation="fadeInUp")
