--- a/parts/head.jade
+++ b/parts/head.jade
@@ -26,3 +26,5 @@ mixin head(title, keywords, description)
 		link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
 		link(rel="manifest" href="/manifest.json")
 		link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5")
+		script(type='text/javascript').
+			window.$crisp=[];window.CRISP_WEBSITE_ID="932fb9ee-7e6a-4bfb-948a-1ed30eddc04c";(function(){ d=document;s=d.createElement("script"); s.src="https://client.crisp.chat/l.js"; s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();
